dep-board.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board
  template:
    metadata:
      labels:
        app: board
    spec:
      containers:
      - name: board-container
        image: oolralra/board:1.2
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: board-svc
spec:
  selector:
    app: board
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
