dep-main.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main-container
        image: oolralra/main:1.0
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
