ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbingress
  annotations:
          #    alb.ingress.kubernetes.io/scheme: internet-facing
          #    alb.ingress.kubernetes.io/target-type: ip
          #    alb.ingress.kubernetes.io/group.name: sb-group
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.com
      http:
        paths:
        - path: /sb
          pathType: Prefix
          backend:
            service:
              name: svc-jar
              port:
                number: 8085
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-svc
              port:
                number: 80
        - path: /mario
          pathType: Prefix
          backend:
            service:
              name: mario
              port:
                number: 80
        - path: /main
          pathType: Prefix
          backend:
            service:
              name: main-svc
              port:
                number: 80
        - path: /board
          pathType: Prefix
          backend:
            service:
              name: board-svc
              port:
                number: 80
